--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,78 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>0</td> <td title="&lt;&lt;TestNG_Annotations.afterSuite()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-157</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeTest()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-59</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterTest()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-184</td> <td title="&gt;&gt;TestNG_Annotations.beforeSuite()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.test2()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">test2</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.runTestMultipleTimes()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">runTestMultipleTimes</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.login()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">login</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeClass()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterClass()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterClass</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test1()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test1</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test5()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test5</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>13</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterTest()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-82</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test2()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test2</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterClass()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-217</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeClass()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test4()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test4</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.description()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">description</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>14</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.gracefulTearDown()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;gracefulTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.runTestMultipleTimes()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">runTestMultipleTimes</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-302</td> <td title="&gt;&gt;TestNG_GroupingAndDependency.beforeSuite()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>102</td> <td title="&lt;&lt;TestNG_GroupingAndDependency.afterSuite()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-266</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforTest()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.dependsOnMethods()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">dependsOnMethods</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.alwaysRun()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">alwaysRun</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-88</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test</td> 
+  <td>main@617901222</td>   <td></td> </tr>
 </table>
