--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,78 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterClass()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterClass</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterClass()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>66</td> <td title="&lt;&lt;TestNG_Annotations.afterSuite()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>90</td> <td title="&lt;&lt;TestNG_GroupingAndDependency.afterSuite()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>7</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterTest()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&lt;&lt;afterTest</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>1</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.afterTest()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-57</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeClass()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-118</td> <td title="&gt;&gt;TestNG_Annotations.beforeSuite()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-91</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeTest()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.login()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">login</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.alwaysRun()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">alwaysRun</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/06 19:04:02</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.test2()[pri:0, instance:tests.TestNG_Annotations@3dd1dc90]">test2</td> 
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-278</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforTest()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-229</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeClass()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_GroupingAndDependency.beforeMethod()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-314</td> <td title="&gt;&gt;TestNG_GroupingAndDependency.beforeSuite()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.dependsOnMethods()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">dependsOnMethods</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.description()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">description</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>2</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_GroupingAndDependency.gracefulTearDown()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">&lt;&lt;gracefulTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.runTestMultipleTimes()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">runTestMultipleTimes</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.runTestMultipleTimes()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">runTestMultipleTimes</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test1()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test1</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test2()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test2</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-83</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test4()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test4</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/08 19:02:31</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_GroupingAndDependency.test5()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]">test5</td> 
   <td>main@617901222</td>   <td></td> </tr>
 </table>
