--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,55 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.TestNG_GroupingAndDependency</td>
+<td>tests.TestNG_Annotations</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test4</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test5</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>test2</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test3</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dependsOnMethods</td>
+<td>login</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>description</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>alwaysRun</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>runTestMultipleTimes</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
-<td>smoke </td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
