--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9492a2">  <td>23/09/15 19:04:13</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;RegistrationFormTest.afterTest()[pri:0, instance:tests.RegistrationFormTest@29ef6856]">&lt;&lt;afterTest</td> 
+<tr bgcolor="9492a2">  <td>23/09/15 20:02:10</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;RegistrationFormTest.close()[pri:0, instance:tests.RegistrationFormTest@7e38a7fe]">&lt;&lt;close</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/15 19:03:59</td>   <td>-13670</td> <td>&nbsp;</td><td title="&gt;&gt;RegistrationFormTest.beforeTest()[pri:0, instance:tests.RegistrationFormTest@29ef6856]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="9492a2">  <td>23/09/15 20:01:51</td>   <td>-19039</td> <td>&nbsp;</td><td title="&gt;&gt;RegistrationFormTest.initializeWebDriver()[pri:0, instance:tests.RegistrationFormTest@7e38a7fe]">&gt;&gt;initializeWebDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/15 19:04:13</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationFormTest.registerForm(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.RegistrationFormTest@29ef6856]">registerForm</td> 
+<tr bgcolor="9492a2">  <td>23/09/15 20:02:06</td>   <td>-4331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationFormTest.registrationFormTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.RegistrationFormTest@7e38a7fe]">registrationFormTest</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/15 19:04:13</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationFormTest.registerForm(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.RegistrationFormTest@29ef6856]">registerForm</td> 
+<tr bgcolor="9492a2">  <td>23/09/15 20:02:06</td>   <td>-4331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationFormTest.registrationFormTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.RegistrationFormTest@7e38a7fe]">registrationFormTest</td> 
   <td>main@617901222</td>   <td></td> </tr>
 </table>
